# m08

parte1-navegacao-com-ros/: README.md
parte1-navegacao-com-ros/workspace/maps/: default.csv
parte1-navegacao-com-ros/workspace/src/maze_solver/: CMakeLists.txt  package.xml
parte1-navegacao-com-ros/workspace/src/maze_solver/src/: .maze_solver.cpp.swo  maze_solver.cpp
parte2-chatbot-com-regras/: README.md
parte2-chatbot-com-regras/src/: main.py
parte3-chatbot-com-llm/: README.md
parte3-chatbot-com-llm/src/: main.py  new.py  response_example.txt
