<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze_solver</name>
  <version>0.0.0</version>
  <description>interact with service /move_command</description>
  <maintainer email="itachi@todo.todo">itachi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for build, runtime, and testing -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cg_interfaces</depend>  <!-- Add dependency on cg_interfaces -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

